docs: update testing guide + README credits for eighty20results migration
Reflect the test-harness migration from joelwetzel/hubitat_ci (Groovy 2.5,
commit-SHA pinning) to eighty20results/hubitat_ci v0.28.6 (Groovy 3.0,
release-tag pinning):

- docs/testing.md: bump framework line to Spock 2.3 on Groovy 3.0 and note
  eighty20results actively tests against Hubitat's Groovy 2.4 runtime;
  rewrite the Hubitat-sandbox bullet to point at eighty20results with tag
  pinning and the native hubitat.helper.* -> common_api.* sandbox mapping;
  document the new HarnessSpec pattern (addChildApp / getChildApps on
  script.metaClass, childAppResolver closure, no --add-opens needed under
  Groovy 3) and RuleHarnessSpec's setParent() propagation; call out that
  RMUtilsMock still targets the test-classpath stub and will need to
  install on the mapped class for sandbox-side interception in PR #79;
  add a note atop the PR #79 recipe block with the same caveat.
- README.md Acknowledgments: add eighty20results (Apache 2.0) as the
  current test dep while keeping biocomp as the original-framework credit
  and mentioning joelwetzel as the previous upstream we migrated from.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>